gen/grammarfileParser.java
// Generated from D:/yapis/ListCompiler/src/main/resources\grammarfile.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class grammarfileParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SPACE=1, NAME=2, NUMBER=3, STRING=4, OPEN_BRACKET=5, CLOSE_BRACKET=6, 
		OPEN_CURLY_BRACKET=7, CLOSE_CURLY_BRACKET=8, DOT=9, COMMA=10, ASSIGNMENT=11, 
		SEMICOLON=12, COLON=13, MAIN=14, VOID=15, RETURN=16, CLEAR=17, ADD=18, 
		GET=19, REMOVE=20, SIZE=21, IS_EMPTY=22, CONTAINS=23, ELEMENT=24, LIST=25, 
		PRINT=26, FOR=27, IF=28, ELSE=29, AND=30, OR=31, EQUAL=32, NEGATION=33;
	public static final int
		RULE_type = 0, RULE_blockOfCode = 1, RULE_returnBlockOfCode = 2, RULE_program = 3, 
		RULE_functionSignature = 4, RULE_voidFunction = 5, RULE_returnFunction = 6, 
		RULE_functionCall = 7, RULE_callClear = 8, RULE_callAdd = 9, RULE_callGet = 10, 
		RULE_callRemove = 11, RULE_callIsEmpty = 12, RULE_callSize = 13, RULE_callContains = 14, 
		RULE_elementDeclaration = 15, RULE_listDeclaration = 16, RULE_callPrint = 17, 
		RULE_forCycle = 18, RULE_compare = 19, RULE_ifBlock = 20, RULE_elseBlock = 21, 
		RULE_content = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"type", "blockOfCode", "returnBlockOfCode", "program", "functionSignature", 
			"voidFunction", "returnFunction", "functionCall", "callClear", "callAdd", 
			"callGet", "callRemove", "callIsEmpty", "callSize", "callContains", "elementDeclaration", 
			"listDeclaration", "callPrint", "forCycle", "compare", "ifBlock", "elseBlock", 
			"content"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'('", "')'", "'{'", "'}'", "'.'", "','", 
			"'='", "';'", "':'", "'main'", "'void'", "'return'", "'clear'", "'add'", 
			"'get'", "'remove'", "'size'", "'isEmpty'", "'contains'", "'Element'", 
			"'List'", "'print'", "'for'", "'if'", "'else'", "'&&'", "'||'", "'=='", 
			"'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SPACE", "NAME", "NUMBER", "STRING", "OPEN_BRACKET", "CLOSE_BRACKET", 
			"OPEN_CURLY_BRACKET", "CLOSE_CURLY_BRACKET", "DOT", "COMMA", "ASSIGNMENT", 
			"SEMICOLON", "COLON", "MAIN", "VOID", "RETURN", "CLEAR", "ADD", "GET", 
			"REMOVE", "SIZE", "IS_EMPTY", "CONTAINS", "ELEMENT", "LIST", "PRINT", 
			"FOR", "IF", "ELSE", "AND", "OR", "EQUAL", "NEGATION"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "grammarfile.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public grammarfileParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode LIST() { return getToken(grammarfileParser.LIST, 0); }
		public TerminalNode ELEMENT() { return getToken(grammarfileParser.ELEMENT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammarfileVisitor ) return ((grammarfileVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_la = _input.LA(1);
			if ( !(_la==ELEMENT || _la==LIST) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockOfCodeContext extends ParserRuleContext {
		public TerminalNode OPEN_CURLY_BRACKET() { return getToken(grammarfileParser.OPEN_CURLY_BRACKET, 0); }
		public TerminalNode CLOSE_CURLY_BRACKET() { return getToken(grammarfileParser.CLOSE_CURLY_BRACKET, 0); }
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public BlockOfCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockOfCode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).enterBlockOfCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).exitBlockOfCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammarfileVisitor ) return ((grammarfileVisitor<? extends T>)visitor).visitBlockOfCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockOfCodeContext blockOfCode() throws RecognitionException {
		BlockOfCodeContext _localctx = new BlockOfCodeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_blockOfCode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(OPEN_CURLY_BRACKET);
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NAME) | (1L << OPEN_BRACKET) | (1L << ELEMENT) | (1L << LIST) | (1L << FOR) | (1L << IF))) != 0)) {
				{
				{
				setState(49);
				content();
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(55);
			match(CLOSE_CURLY_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnBlockOfCodeContext extends ParserRuleContext {
		public TerminalNode OPEN_CURLY_BRACKET() { return getToken(grammarfileParser.OPEN_CURLY_BRACKET, 0); }
		public TerminalNode RETURN() { return getToken(grammarfileParser.RETURN, 0); }
		public TerminalNode NAME() { return getToken(grammarfileParser.NAME, 0); }
		public TerminalNode SEMICOLON() { return getToken(grammarfileParser.SEMICOLON, 0); }
		public TerminalNode CLOSE_CURLY_BRACKET() { return getToken(grammarfileParser.CLOSE_CURLY_BRACKET, 0); }
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public ReturnBlockOfCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnBlockOfCode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).enterReturnBlockOfCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).exitReturnBlockOfCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammarfileVisitor ) return ((grammarfileVisitor<? extends T>)visitor).visitReturnBlockOfCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnBlockOfCodeContext returnBlockOfCode() throws RecognitionException {
		ReturnBlockOfCodeContext _localctx = new ReturnBlockOfCodeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_returnBlockOfCode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(OPEN_CURLY_BRACKET);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NAME) | (1L << OPEN_BRACKET) | (1L << ELEMENT) | (1L << LIST) | (1L << FOR) | (1L << IF))) != 0)) {
				{
				{
				setState(58);
				content();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			match(RETURN);
			setState(65);
			match(NAME);
			setState(66);
			match(SEMICOLON);
			setState(67);
			match(CLOSE_CURLY_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(grammarfileParser.MAIN, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(grammarfileParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(grammarfileParser.CLOSE_BRACKET, 0); }
		public BlockOfCodeContext blockOfCode() {
			return getRuleContext(BlockOfCodeContext.class,0);
		}
		public List<VoidFunctionContext> voidFunction() {
			return getRuleContexts(VoidFunctionContext.class);
		}
		public VoidFunctionContext voidFunction(int i) {
			return getRuleContext(VoidFunctionContext.class,i);
		}
		public List<ReturnFunctionContext> returnFunction() {
			return getRuleContexts(ReturnFunctionContext.class);
		}
		public ReturnFunctionContext returnFunction(int i) {
			return getRuleContext(ReturnFunctionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammarfileVisitor ) return ((grammarfileVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(MAIN);
			setState(70);
			match(OPEN_BRACKET);
			setState(71);
			match(CLOSE_BRACKET);
			setState(72);
			blockOfCode();
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << ELEMENT) | (1L << LIST))) != 0)) {
				{
				setState(75);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VOID:
					{
					setState(73);
					voidFunction();
					}
					break;
				case ELEMENT:
				case LIST:
					{
					setState(74);
					returnFunction();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionSignatureContext extends ParserRuleContext {
		public TerminalNode OPEN_BRACKET() { return getToken(grammarfileParser.OPEN_BRACKET, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> NAME() { return getTokens(grammarfileParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(grammarfileParser.NAME, i);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(grammarfileParser.CLOSE_BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(grammarfileParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(grammarfileParser.COMMA, i);
		}
		public FunctionSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).enterFunctionSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).exitFunctionSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammarfileVisitor ) return ((grammarfileVisitor<? extends T>)visitor).visitFunctionSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionSignatureContext functionSignature() throws RecognitionException {
		FunctionSignatureContext _localctx = new FunctionSignatureContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionSignature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(OPEN_BRACKET);
			setState(81);
			type();
			setState(82);
			match(NAME);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(83);
				match(COMMA);
				setState(84);
				type();
				setState(85);
				match(NAME);
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(CLOSE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VoidFunctionContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(grammarfileParser.VOID, 0); }
		public TerminalNode NAME() { return getToken(grammarfileParser.NAME, 0); }
		public BlockOfCodeContext blockOfCode() {
			return getRuleContext(BlockOfCodeContext.class,0);
		}
		public FunctionSignatureContext functionSignature() {
			return getRuleContext(FunctionSignatureContext.class,0);
		}
		public TerminalNode OPEN_BRACKET() { return getToken(grammarfileParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(grammarfileParser.CLOSE_BRACKET, 0); }
		public VoidFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_voidFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).enterVoidFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).exitVoidFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammarfileVisitor ) return ((grammarfileVisitor<? extends T>)visitor).visitVoidFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VoidFunctionContext voidFunction() throws RecognitionException {
		VoidFunctionContext _localctx = new VoidFunctionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_voidFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(VOID);
			setState(95);
			match(NAME);
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(96);
				functionSignature();
				}
				break;
			case 2:
				{
				{
				setState(97);
				match(OPEN_BRACKET);
				setState(98);
				match(CLOSE_BRACKET);
				}
				}
				break;
			}
			setState(101);
			blockOfCode();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnFunctionContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode NAME() { return getToken(grammarfileParser.NAME, 0); }
		public ReturnBlockOfCodeContext returnBlockOfCode() {
			return getRuleContext(ReturnBlockOfCodeContext.class,0);
		}
		public FunctionSignatureContext functionSignature() {
			return getRuleContext(FunctionSignatureContext.class,0);
		}
		public TerminalNode OPEN_BRACKET() { return getToken(grammarfileParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(grammarfileParser.CLOSE_BRACKET, 0); }
		public ReturnFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).enterReturnFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).exitReturnFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammarfileVisitor ) return ((grammarfileVisitor<? extends T>)visitor).visitReturnFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnFunctionContext returnFunction() throws RecognitionException {
		ReturnFunctionContext _localctx = new ReturnFunctionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_returnFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			type();
			setState(104);
			match(NAME);
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(105);
				functionSignature();
				}
				break;
			case 2:
				{
				{
				setState(106);
				match(OPEN_BRACKET);
				setState(107);
				match(CLOSE_BRACKET);
				}
				}
				break;
			}
			setState(110);
			returnBlockOfCode();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(grammarfileParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(grammarfileParser.NAME, i);
		}
		public TerminalNode SEMICOLON() { return getToken(grammarfileParser.SEMICOLON, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(grammarfileParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(grammarfileParser.CLOSE_BRACKET, 0); }
		public List<TerminalNode> STRING() { return getTokens(grammarfileParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(grammarfileParser.STRING, i);
		}
		public List<FunctionCallContext> functionCall() {
			return getRuleContexts(FunctionCallContext.class);
		}
		public FunctionCallContext functionCall(int i) {
			return getRuleContext(FunctionCallContext.class,i);
		}
		public List<CallGetContext> callGet() {
			return getRuleContexts(CallGetContext.class);
		}
		public CallGetContext callGet(int i) {
			return getRuleContext(CallGetContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(grammarfileParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(grammarfileParser.COMMA, i);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).enterFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).exitFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammarfileVisitor ) return ((grammarfileVisitor<? extends T>)visitor).visitFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(NAME);
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				{
				setState(113);
				match(OPEN_BRACKET);
				setState(114);
				match(CLOSE_BRACKET);
				}
				}
				break;
			case 2:
				{
				{
				setState(115);
				match(OPEN_BRACKET);
				setState(120);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(116);
					match(STRING);
					}
					break;
				case 2:
					{
					setState(117);
					functionCall();
					}
					break;
				case 3:
					{
					setState(118);
					callGet();
					}
					break;
				case 4:
					{
					setState(119);
					match(NAME);
					}
					break;
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(122);
					match(COMMA);
					setState(127);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						setState(123);
						match(STRING);
						}
						break;
					case 2:
						{
						setState(124);
						functionCall();
						}
						break;
					case 3:
						{
						setState(125);
						callGet();
						}
						break;
					case 4:
						{
						setState(126);
						match(NAME);
						}
						break;
					}
					}
					}
					setState(133);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(134);
				match(CLOSE_BRACKET);
				}
				}
				break;
			}
			setState(137);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallClearContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(grammarfileParser.NAME, 0); }
		public TerminalNode DOT() { return getToken(grammarfileParser.DOT, 0); }
		public TerminalNode CLEAR() { return getToken(grammarfileParser.CLEAR, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(grammarfileParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(grammarfileParser.CLOSE_BRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(grammarfileParser.SEMICOLON, 0); }
		public CallClearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callClear; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).enterCallClear(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarfileListener ) ((grammarfileListener)listener).exitCallClear(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammarfileVisitor ) return ((grammarfileVisitor<? extends T>)visitor).visitCallClear(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallClearContext callClear() throws RecognitionException {
		CallClearContext _localctx = new CallClearContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_callClear);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(NAME);
			setState(140);
			match(DOT);
			setState(141);
			match(CLEAR);
			setState(142);
			match(OPEN_BRACKET);
			setState(143);
			match(CLOSE_BRACKET);
			setState(144);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
